fix link color on small safari iPhone screens

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -476,6 +476,7 @@
             text-decoration: none;
             font-size: 1.2rem;
             font-weight: 700;
+            color: black;
 
             img {
                 width: 25%;
@@ -488,7 +489,7 @@
             }
 
             &:visited {
-                color: inherit;
+                color: black;
             }
 
         }
@@ -837,6 +838,7 @@
             text-decoration: none;
             font-weight: 700;
             font-size: 1.2rem;
+            color: black;
 
 
             img {
@@ -848,7 +850,7 @@
             }
 
             &:visited {
-                color: inherit;
+                color: black;
             }
         }
 
